crates/kply-cli/tests/snapshots/cli__session_manifests_yaml_with_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "error": {
    "code": "usage",
    "details": "error: the argument '--yaml' cannot be used with '--json'\n\nUsage: kply session manifests --yaml <APP>\n\nFor more information, try '--help'.\n",
    "exit_code": 2,
    "message": "error: the argument '--yaml' cannot be used with '--json'"
  }
}
