crates/kply-cli/tests/snapshots/cli__session_plan_missing_app_json.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 688
expression: value
---
{
  "error": {
    "code": "app_not_found",
    "exit_code": 2,
    "message": "app `missing` is not configured"
  }
}
