crates/kply-cli/tests/snapshots/cli__session_plan_missing_image.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 663
expression: stderr
---
kply error: session plan

app `checkout` has no image; pass --image
