crates/kply-cli/tests/snapshots/cli__session_plan_placeholder_json_with_all_overrides.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 509
expression: value
---
{
  "id": "checkout-plan",
  "image": "ghcr.io/kubeply/checkout:v2",
  "name": "checkout-session",
  "planned_annotations": [
    {
      "key": "kply.dev/image",
      "value": "ghcr.io/kubeply/checkout:v2"
    },
    {
      "key": "kply.dev/route-strategy",
      "value": "header"
    },
    {
      "key": "kply.dev/workload",
      "value": "staging/Deployment/checkout-api"
    }
  ],
  "planned_labels": [
    {
      "key": "kply.dev/app",
      "value": "checkout"
    },
    {
      "key": "kply.dev/managed-by",
      "value": "kply"
    },
    {
      "key": "kply.dev/session-id",
      "value": "checkout-plan"
    },
    {
      "key": "kply.dev/session-name",
      "value": "checkout-session"
    }
  ],
  "planned_resources": [
    {
      "kind": "Deployment",
      "name": "checkout-plan-workload",
      "namespace": "staging"
    },
    {
      "kind": "HTTPRoute",
      "name": "checkout-plan-route",
      "namespace": "staging"
    },
    {
      "kind": "Service",
      "name": "checkout-plan-service",
      "namespace": "staging"
    }
  ],
  "policy": {
    "allowed_operations": [
      "inspect",
      "plan",
      "prepare",
      "route",
      "verify",
      "cleanup"
    ]
  },
  "route_selector": {
    "kind": "header",
    "name": "x-kply-session",
    "value": "checkout-plan"
  },
  "status": "planned",
  "ttl": "30m",
  "workload": {
    "kind": "Deployment",
    "name": "checkout-api",
    "namespace": "staging"
  }
}
