crates/kply-cli/tests/snapshots/cli__session_plan_placeholder_json_with_image_and_namespace.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 444
expression: value
---
{
  "id": "checkout-plan",
  "image": "ghcr.io/kubeply/checkout:v2",
  "name": "checkout-session",
  "policy": {
    "allowed_operations": [
      "inspect",
      "plan",
      "prepare",
      "route",
      "verify",
      "cleanup"
    ]
  },
  "route_selector": {
    "kind": "header",
    "name": "x-kply-session",
    "value": "checkout-plan"
  },
  "status": "planned",
  "ttl": null,
  "workload": {
    "kind": "Deployment",
    "name": "checkout-api",
    "namespace": "staging"
  }
}
