crates/kply-cli/tests/snapshots/cli__session_plan_placeholder_json_with_image_namespace_and_ttl.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 369
expression: value
---
{
  "app": "checkout",
  "command": "session plan",
  "image": "ghcr.io/kubeply/checkout:v2",
  "namespace": "staging",
  "status": "placeholder",
  "ttl": "30m"
}
